# collatz

./: .gitignore  README.md
.github/workflows/: build_container.yml
go/: BUILD.bazel  WORKSPACE
go/literal/: Dockerfile  go.mod  go.sum  main.go
kotlin/literal/: Dockerfile  settings.gradle.kts
kotlin/literal/client/: build.gradle.kts
kotlin/literal/client/src/main/kotlin/com/github/ebagos/collatz/: CollatzClient.kt
kotlin/literal/server/: build.gradle.kts
kotlin/literal/server/src/main/kotlin/com/github/ebagos/collatz/: CollatzServer.kt
kotlin/literal/server/src/test/kotlin/com/github/ebagos/collatz/: CollatzServerTest.kt
proto/: collatz.pb.go  collatz_grpc.pb.go
rust/literal/: Cargo.toml  Dockerfile  build.rs
rust/literal/proto/: collatz.proto
rust/literal/src/: client.rs  server.rs
spring/literal/: Dockerfile  pom.xml
spring/literal/src/main/java/com/github/ebagos/collatz/literal/: LiteralApplication.java
spring/literal/src/main/java/com/github/egabos/collatz/literal/: LiteralApplication.java
spring/literal/src/main/proto/: collatz.proto
spring/literal/src/test/java/com/github/ebagos/collatz/literal/: LiteralApplicationTests.java
spring/literal/src/test/java/com/github/egabos/collatz/literal/: LiteralApplicationTests.java
