[package]
name = "literal"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Collatz gRPC server
name = "collatz-server"
path = "src/server.rs"

[[bin]] # Bin to run the Collatz gRPC client
name = "collatz-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
